--- a/styles/Menu.module.css
+++ b/styles/Menu.module.css
@@ -1,3 +1,11 @@
 .header{
-    background-color: var(--lp-black);
+    width: 100%;
+    height: 5rem;
+    margin: 0 auto;
+}
+.logo__container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2rem;
 }
